--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>M2iFlix</h1>
+<div class="container pt-2">
+    <h1>M2iFlix</h1>
+</div>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
