--- a/src/app/components/film/film.component.html
+++ b/src/app/components/film/film.component.html
@@ -1,19 +1,17 @@
-<div class="row align-items-md-stretch">
-    <div class="col-md-6">
-        <div class="h-100 p-5 text-white bg-dark rounded-3">
-            <h2>Change the background</h2>
-            <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then,
-                mix and match with additional component themes and more.</p>
-            <button class="btn btn-outline-light" type="button">Example button</button>
+<section class="container">
+    <div class="hero-container" *ngFor="let film of films">
+        <div class="main-container">
+            <div class="poster-container">
+                <a href="#"><img src="{{film.image}}" class="poster" /></a>
+            </div>
+            <div class="ticket-container">
+                <div class="ticket__content">
+                    <h4 class="ticket__movie-title">{{film.titre}}</h4>
+                    <p class="ticket__movie-genre">{{film.genre}}</p>
+                    <p class="ticket__movie-genre">{{film.annee}}</p>
+                    <a class="ticket__add-btn">Ajouter &agrave; ma liste</a>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="col-md-6">
-        <div class="h-100 p-5 bg-light border rounded-3">
-            <h2>Add borders</h2>
-            <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure
-                to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both
-                column's content for equal-height.</p>
-            <button class="btn btn-outline-secondary" type="button">Example button</button>
-        </div>
-    </div>
-</div>
+</section>
