--- a/src/app/components/connexion/connexion.component.html
+++ b/src/app/components/connexion/connexion.component.html
@@ -13,8 +13,8 @@
                 required >
                 <label for="password">Votre mot de passe</label>
             </div>
-            <button class="btn btn-lg btn-primary" type="submit" [disabled]="!monFormLogin.valid">Connexion</button>
-            <a [routerLink]="['/inscription']" class="btn btn-lg btn-secondary" type="button">Inscription</a>
+            <button class="btn btn-lg btn-outline-danger m-2" type="submit" [disabled]="!monFormLogin.valid">Connexion</button>
+            <a [routerLink]="['/inscription']" class="btn btn-lg btn-outline-dark p-2" type="button">Inscription</a>
         </form>
     </div>
 </div>
