chore: add route a propos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container pt-2">
-    <h1>M2iFlix</h1>
+    <h1><strong class="text-danger">M2i</strong>Flix</h1>
 </div>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
