chore: update user and film

--- a/src/app/components/film/film.component.html
+++ b/src/app/components/film/film.component.html
@@ -8,8 +8,8 @@
                     <p class="card-text">{{ film.genre }}</p>
                     <p class="card-text">{{ film.annee }}</p>
                 </div>
-                <div class="card-footer">
-                    <button class="btn" (click)=" addFilms(film) ">Ajouter à ma liste</button>
+                <div class="card-footer text-center">
+                    <button class="btn btn-lg btn-outline-danger" (click)=" addFilms(film) ">Ajouter à ma liste</button>
                 </div>
             </div>
         </div>
