--- a/src/app/components/mes-films/mes-films.component.html
+++ b/src/app/components/mes-films/mes-films.component.html
@@ -1,1 +1,20 @@
-<p>mes-films works!</p>
+<section class="container">
+    <h2 class="text-center text-uppercase">Ma liste de films &agrave; voir</h2>
+    <div class="container px-4 py-5" id="custom-cards">
+        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+            <div class="col" *ngFor="let film of films">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-4 shadow-lg"
+                    style="background-image: url('{{film.image}}'); object-fit: cover;">
+                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-danger">{{film.titre}}</h2>
+                        <ul class="d-flex list-unstyled mt-auto">
+                            <li class="d-flex align-items-center text-white">
+                                <button class="btn btn-danger">supprimer</button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
